--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -5,7 +5,7 @@ body {
 /* Hero Section */
 
 #Hero-Section {
-  background-image: url("../img/bg-hero.jpg");
+  background-image: url("../img/new-bg-hero.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -36,4 +36,8 @@ body {
     width: 100px;
   }
 
+}
+
+.backdrop-blur {
+  backdrop-filter: blur(100px);
 }
